# screenshot_tool

./: Cargo.toml  README.md  guide.txt
.github/workflows/: release.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/capture/: fullscreen.rs  mod.rs  selection.rs  window.rs
src/utils/: clipboard.rs  mod.rs  path.rs
